[tool.poetry]
name = "schedule-stealer"
version = "0.1.0"
description = ""
authors = ["Krystian Postek <krystian@postek.eu>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
